Third submission version

--- a/Trees with Base Functions v3.Rmd
+++ b/Trees with Base Functions v3.Rmd
@@ -68,8 +68,6 @@ library(rgdal)
 library(knitr)
 library(kableExtra)
 library(mlbench)
-#library(dprep)
-#library(rattle.data)
 library(microbenchmark)
 library(RColorBrewer)
 library(scales)
@@ -241,7 +239,7 @@ Under this setting define $X^{\ast }=\left( X_{1},\dots,X_{p},X_{p+1},\dots ,X_{
 with $X_{p+i}=h_i(b_1(X_1),b_1(X_2)\dots, b_K(X_p))$, for $i=1,\dots ,D$. Therefore by applying the standard recursive partitioning method  to $X^\ast$, its projection on $X$ will provide an oblique partition (also eventually non-linear as desired), which will take into account the interactions among the features.
 
 For example, in the case of $p=2$, that is $X=\{X_1,X_2\}$, $T=1$, $K=1$ with $b_1(x)=x$, $D=1$ with $h_1(b_1(X_1),b_1(X_2))=b_1(X_1)+b_2(X_2)=X_1+X_2$ (i.e., an additivie function) and
-$X^{\ast }=\left( X_{1},X_{2},X_{3} \right)$ we obtain that $X_3=s$ is projected in the plane of the original basis as $X_2=s-X_1$, thus providing an oblique partition on that plane as shown in Figure \ref{fig:fig4-additive-basis}.
+$X^{\ast }=\left( X_{1},X_{2},X_{3} \right)$ we obtain that $X_3=s$ is projected on the plane of the original basis as $X_2=s-X_1$, thus providing an oblique partition on that plane as shown in Figure \ref{fig:fig4-additive-basis}.
 
 ```{r fig4-additive-basis, echo = FALSE, warning = FALSE, , fig.show = 'asis', fig.cap= "\\label{fig:fig4-additive-basis}Oblique basis function and projections with different splitting points (s)"}
 ggplot(data.frame(x = c(0, 1)), aes(x)) +
@@ -373,11 +371,11 @@ grid.arrange(p1, p2, layout_matrix = lay)
 5 Benchmarking
 ===================
 
-In this section we conduct a benchmarking exercise using a collection of publicly available datasets that are widely used in the literature to test the performance of machine learning techniques. The source of the data is the paper of Fernandez-Delgado et al. [-@FernandezDelgado2014], who conducted an extensive experiment testing machine learning algorithms. These authors conducted their experiments with $121$ datasets. An extensive list of classifiers were applied to these datasets, and then the classifiers were ranked based on their average accuracy and probability that they succeed by chance (measured by means of Cohen's kappa). The results indicate that the best classifiers belong to the family of Random Forests and Support Vector Machines.
+In this section we conduct a benchmarking exercise using a collection of publicly available datasets. The source of the data is the paper of Fernandez-Delgado et al. [-@FernandezDelgado2014], who conducted an extensive experiment testing machine learning algorithms. These authors conducted their experiments with $121$ datasets. An extensive list of classifiers were applied to these datasets, and then the classifiers were ranked based on their average accuracy and probability that they succeed by chance (measured by means of Cohen's kappa). Their results indicate that the best classifiers belong to the family of Random Forests and Support Vector Machines.
 
 Our focus in the present paper is on comparing DT-based algorithms only. Fernandez-Delgado et al. [-@FernandezDelgado2014] already provide a comprehensive ranking of algorithms, and our objective instead is to assess how IBFs perform in DT, relative to conventional orthogonal partitions. Since one advantage of using IBFs is that they can be used in virtually any implementation of DTs, we choose to illustrate their applicability using three different methods: a conventional tree algorithm [implemented in the R package `tree`, see @Ripley2018], random forest [implemented in the R package `randomForest`, see @Liaw2002], and an evolutionary algorithm [implemented in the package `evtree`, see @Grubinger2014]. It is worthwhile to note that the top algorithm in the experiments of Fernandez-Delgado [-@FernandezDelgado2014] was the parallel implementation of the random forest method; however, these authors did not assess the evolutionary algorithm as we do. Other R packages exist that implement non-orthogonal partitions, however they are limited to binary classification [in the `obliqueRF` package of @Menze2012] or to two features [in the spatial oblique decision trees package `SPODT` of @Gaudart2015]. 
 
-The experiments were conducted using a parallel implementation of the code, using 4 Intel i7-6600U cores clocked at 2.60 GHz. For the present study we use a subset of the $121$ datasets from the collection of Fernandez-Delgado et al. [-@FernandezDelgado2014]. After excluding a number of datasets that led to errors with the evolutionary tree algorithm we tested, we work with the $93$ datasets listed in Table \ref{tab:Datasets}. The main reason for the errors was a large number of observations, which may be a limitation of our computer resources rather than the algorithm. The table lists some of the characteristics of the datasets, including the number of observations ($n$), the number of features ($f$), the number of classes ($k$) of the independent variable, and the proportion of the majority class in the dataset ($m$).
+The experiments were conducted using a parallel implementation of the code, using 4 Intel i7-6600U cores clocked at 2.60 GHz. For the present study we use a subset of the $121$ datasets from the collection of Fernandez-Delgado et al. [-@FernandezDelgado2014]. After excluding a number of datasets that led to errors when running the evolutionary tree algorithm, we work with $93$ datasets. The main reason for the errors was a large number of observations, which may be a limitation of our computer resources rather than the algorithm. Table \ref{tab:Datasets} lists the characteristics of the datasets, including the number of observations ($n$), the number of features ($f$), the number of classes ($k$) of the independent variable, and the proportion of the majority class in the dataset ($m$).
 
 ```{r dataset-description, echo = FALSE}
 #Summarize datasets:
@@ -414,7 +412,7 @@ kable(dataset.stats, "latex", booktabs = TRUE, longtable = TRUE, digits = 2,
   kable_styling(latex_options = c("repeat_header"))
 ```
 
-As noted above, centering and scaling the variables is important for the use of IBFs. The variables in the datasets provided by Fernandez-Delgado et al. [-@FernandezDelgado2014] have already been normalized to have a mean of zero and a standard deviation of one (p. 3139). We use the variables as they are, rather than changing them. The experiments are conducted using $k$-fold cross-validation, a technique commonly used to assess the performance of algorithms that involves randomly thinning a dataset to obtain a $(100 - 100/k)$% training sample, in a procedure that is repeated $k$ times. In line with the experiments of Fernandez-Delgado et al. [-@FernandezDelgado2014] in this section we use 4-fold cross-validation.
+As noted above, centering and scaling the variables is important for the use of IBFs. The variables in the datasets provided by Fernandez-Delgado et al. [-@FernandezDelgado2014] have already been normalized to have a mean of zero and a standard deviation of one (p. 3139). We use the variables as they are, rather than changing them. The experiments are conducted using $k$-fold cross-validation, a technique commonly used to assess the performance of algorithms. $k$-fold cross-validation involves randomly thinning a dataset to obtain a $(100 - 100/k)$% training sample, in a procedure that is repeated $k$ times. In line with the experiments of Fernandez-Delgado et al. [-@FernandezDelgado2014] in this section we use 4-fold cross-validation.
 
 In terms of the IBFs, we consider the following functions:
 $$
@@ -448,7 +446,7 @@ kable(benchmark_summary, "latex", booktabs = TRUE, digits = 2,
   footnote(general = "Tree Size is not meaningful in the case of random forest, since the model is an ensemble of trees. ")
 ```
 
-The size of the experiment is as follows: three different methods (tree/random forest/evolutionary tree), ninety three different datasets, two different types of partitions (orthogonal/IBFs), and four replications for each (i.e., $4$-fold cross-validation). The summary of the results is shown in Table \ref{tab:summary-benchmarking}, where it can be seen that random forests outperform evolutionary trees, which in turn outperform conventional trees. This is as anticipated. Further, for the same algorithm, the use of IBF increases the average accuracy slightly, and provides similar results in terms of kappa and the mean tree size.
+The size of the experiment is as follows: three different methods (tree/random forest/evolutionary tree), ninety three different datasets, two different types of partitions (orthogonal/IBFs), and four replications for each (i.e., $4$-fold cross-validation). The summary of the results is shown in Table \ref{tab:summary-benchmarking}, where it can be seen that random forests outperform evolutionary trees, which in turn outperform conventional trees. This is as anticipated. Further, for the same algorithm, the use of IBF increases the average accuracy slightly, and provides similar results in terms of kappa and mean tree size.
 
 ```{r accuracy-by-dataset, echo=FALSE}
 #Summarize by classifier and dataset. First, group to obtain summaries per group:
@@ -520,7 +518,7 @@ kable(accuracy_by_dataset,
 
 The summary in Table \ref{tab:summary-benchmarking} indicates that on average IBFs perform only slightly better compared to orthogonal partitions. Conducting a Friedman ranking test of the results of the experiments confirms that there are significant differences among the three classification methods (i.e., tree, forest, evolutionary trees; $Q =$ `r prettyNum(friedman.test(as.matrix(accuracy_by_dataset[,2:7]))[1], digit = 2)`, $p$-val $\approx$ `r prettyNum(friedman.test(as.matrix(accuracy_by_dataset[,2:7]))[3], digit = 4)`). However, when the test is conducted between orthogonal and IBF _within_ a given classification method, the results are not significant ($Q =$ `r prettyNum(friedman.test(as.matrix(accuracy_by_dataset[,2:3]))[1], digit = 2)`, $p$-val $\approx$ `r prettyNum(friedman.test(as.matrix(accuracy_by_dataset[,2:3]))[3], digit = 4)` for tree; $Q =$ `r prettyNum(friedman.test(as.matrix(accuracy_by_dataset[,4:5]))[1], digit = 2)`, $p$-val $\approx$ `r prettyNum(friedman.test(as.matrix(accuracy_by_dataset[,4:5]))[3], digit = 4)` for forest; $Q =$ `r prettyNum(friedman.test(as.matrix(accuracy_by_dataset[,6:7]))[1], digit = 2)`, $p$-val $\approx$ `r prettyNum(friedman.test(as.matrix(accuracy_by_dataset[,6:7]))[3], digit = 4)` for evolutionary tree). 
 
-These results would suggest that it does not matter whether orthogonal partitions or IBFs are used in any given analysis. An important limitation of this conclusion is that it assumes that all datasets are comparable. As seen in Table \ref{tab:Datasets}, however, the datasets in the experiments vary widely in terms of number of observations and composition (number of features, classes, and proportion of majority class). Inspection of Table \ref{tab:accuracy-by-dataset}, where the accuracy results by dataset are reported, shows IBFs sometimes out-perform orthogonal partitions - but does this happen haphazardly, or on the contrary, in a systematic way? To overcome the limitation of the Friedman test, which ignores the differences in the datasets used for each experiment, in the following section we take a multivariate approach to investigate in more depth the results of the benchmarking experiments. 
+These results would suggest that it does not matter whether orthogonal partitions or IBFs are used in any given analysis. An important limitation of this conclusion is that it assumes that all datasets are comparable. As seen in Table \ref{tab:Datasets}, however, the datasets in the experiment vary widely in terms of their number of observations and composition (number of features, classes, and proportion of majority class). Inspection of Table \ref{tab:accuracy-by-dataset}, where the accuracy results by dataset are reported, shows that IBFs sometimes out-perform orthogonal partitions - but does this happen haphazardly, or on the contrary, in a systematic way? To overcome the limitation of the Friedman test, which ignores the differences in the datasets, in the following section we take a multivariate approach to delve more deeply into the results of the benchmarking experiments. 
 
 ## 5.1 Accuracy
 
@@ -528,7 +526,7 @@ As discussed above, the summary statistics of the results suggest that IBFs impr
 
 We begin by visualizing some of the results.
 
-Figure \ref{fig:fig8-performance-algorithm-results} presents the results of the experiments by method in terms of their accuracy. The horizontal axis is for datasets, ranked from the lowest average accuracy of all methods, to the highest. The plot shows the mean accuracy and standard deviation of each algorithm for each dataset. It can be seen there that the lowest accuracy is around $25$% and the highest is $100$% in the test sample. In general terms, as hinted by the summary results, random forests perform better and trees worse, but this is not always the case. Moreover, as will be shown next, there are notable differences between the use of orthogonal and IBF within each method.
+Figure \ref{fig:fig8-performance-algorithm-results} presents the results of the experiments by method in terms of their accuracy. The horizontal axis is for datasets, ranked from the lowest average accuracy of all methods, to the highest. The plot shows the mean accuracy and standard deviation of each algorithm for each dataset. It can be seen there that the lowest accuracy is around $25$% and the highest is $100$% in the test sample. In general terms, as hinted by the summary results, random forests perform better and trees worse, but this is not always the case. Moreover, as will be discussed next, there are notable differences between the use of orthogonal and IBF within each method.
 
 ```{r data-accuracy-test, include=FALSE}
 #Wrangle data for plotting accuracy
@@ -582,7 +580,7 @@ junk <- left_join(junk, junk2)
 
 ```
 
-Figure \ref{fig:fig9-accuracy-tree} compares the results of implementing the tree algorithms with orthogonal partitions and IBF. Taking as a baseline the accuracy of the models with orthogonal partitions, the datasets are ranked from the largest accuracy loss to the largest accuracy gain attained by the models with IBFs. As seen in the figure, the implementation with IBFs leads to accuracy gains in `r prettyNum(sum(junk$diff_mean_acc_dataset >0)/2, big.mark = ",")` out of 93 datasets, just over 50% of the time - which would explain why the Friedman test is not significant. On the other hand, the maximum accuracy gain is `r prettyNum(max(junk$diff_mean_acc_dataset), big.mark = ",", digits = 4)`% whereas the maximum loss is `r prettyNum(min(junk$diff_mean_acc_dataset), big.mark = ",", digits = 4)`%. In other words, it is not only a matter of whether IBFs perform better, but also how much better.
+Figure \ref{fig:fig9-accuracy-tree} compares the results of implementing the tree algorithm with orthogonal partitions and IBFs. Taking as a baseline the accuracy of the models with orthogonal partitions, the datasets are ranked from the largest accuracy loss to the largest accuracy gain attained by the models with IBFs. As seen in the figure, the implementation with IBFs leads to accuracy gains in `r prettyNum(sum(junk$diff_mean_acc_dataset >0)/2, big.mark = ",")` out of 93 datasets, that is, just over 50% of the time - which would explain why the Friedman test is not significant. On the other hand, the maximum accuracy gain is `r prettyNum(max(junk$diff_mean_acc_dataset), big.mark = ",", digits = 4)`% whereas the maximum loss is `r prettyNum(min(junk$diff_mean_acc_dataset), big.mark = ",", digits = 4)`%. In other words, it is not only a matter of whether IBFs perform better, but also how much better.
 
 ```{r fig9-accuracy-tree, echo=FALSE, fig.cap="\\label{fig:fig9-accuracy-tree}Accuracy comparison for method tree: orthogonal and IBF implementations", fig.height=8, fig.show='asis'}
 
@@ -622,7 +620,7 @@ junk <- left_join(junk, junk2)
 
 ```
 
-With respect to random forest, Figure \ref{fig:fig10-accuracy-forest} compares the results of implementing the algorithm with orthogonal partitions and IBF. Again, taking as a baseline the accuracy of the models with orthogonal partitions, the datasets are ranked from the largest accuracy loss to the largest accuracy gain attained by the models with IBFs. As seen in the figure, the implementation with IBFs leads to accuracy gains in `r prettyNum(sum(junk$diff_mean_acc_dataset >0)/2, big.mark = ",")` out of 93 datasets, just below 50% of the time. The maximum accuracy gain is `r prettyNum(max(junk$diff_mean_acc_dataset), big.mark = ",", digits = 4)`% whereas the maximum loss is `r prettyNum(min(junk$diff_mean_acc_dataset), big.mark = ",", digits = 4)`%.
+With respect to the random forest algorithm, Figure \ref{fig:fig10-accuracy-forest} compares the results with orthogonal partitions and IBFs. Again, taking as a baseline the accuracy of the models with orthogonal partitions, the datasets are ranked from the largest accuracy loss to the largest accuracy gain attained by the models with IBFs. As seen in the figure, the implementation with IBFs leads to accuracy gains in `r prettyNum(sum(junk$diff_mean_acc_dataset >0)/2, big.mark = ",")` out of 93 datasets, just below 50% of the time. The maximum accuracy gain is `r prettyNum(max(junk$diff_mean_acc_dataset), big.mark = ",", digits = 4)`% whereas the maximum loss is `r prettyNum(min(junk$diff_mean_acc_dataset), big.mark = ",", digits = 4)`%.
 
 ```{r fig10-accuracy-forest, echo=FALSE, fig.cap="\\label{fig:fig10-accuracy-forest}Accuracy comparison for method random forest: orthogonal and IBF implementations", fig.height=8, fig.show='asis'}
 #Plot point ranges using orthogonal as a baseline
@@ -672,9 +670,9 @@ ggplot(data = junk, aes(x = rank_order, y = mean_acc_test - mean_acc_tree, ymin 
   theme_minimal()
 ```
 
-To further disentangle the performance of the IBFs in DTs from diverse conditions, we estimate two models using the results of the benchmarking experiments. 
+To further disentangle the performance of the IBFs in DTs in datasets with diverse characteristics, we estimate two models using the results of the benchmarking experiments. 
 
-In these models the independent variable is a proportion, namely the number of times that the algorithm correctly predicts an observation in the test dataset, relative to the number of observations. Model 1 is estimated using the full set of results (i.e., the results from the 4-fold cross-validation), whereas Model 2 is estimated using the accuracy of the best performer within each set of 4-folds. The appropriate modeling approach for proportions is the logistic model. For this model, we use as explanatory variables the attributes of the datasets, to wit, the number of observations ($n$), the number of features ($f$), the number of classes in the dependent variable ($k$), and the proportion of the majority class ($m$), as well as their squares in order to capture non-linearities. Furthermore, we use an indicator variable ($method$) for the three algorithms (i.e. tree, random forest, evolutionary tree), and whether the basis function ($bf$) was orthogonal or IBF. In addition we interact the variable for the basis function ($bf$) with other variables. The results of the model appear in Table \ref{tab:model-accuracy-results}. As seen there, all coefficients are significant at conventional levels of significance. The significant variable interactions obscure the overall effect: whereas the coefficient for IBF is significant and positive, which indicates that the use of IBFs increases the accuracy of the algorithms, it is best to simulate the probability of a success to more fully realize their effect.
+In these models the independent variable is a proportion, namely the number of times that the algorithm correctly predicts an observation in the test dataset, relative to the number of observations. Model 1 is estimated using the full set of results (i.e., the results from the 4-fold cross-validation), whereas Model 2 is estimated using the accuracy of the best performer within each set of 4-folds. The appropriate modeling approach for proportions is the logistic model. For these models, we use as explanatory variables the attributes of the datasets, to wit, the number of observations ($n$), the number of features ($f$), the number of classes in the dependent variable ($k$), and the proportion of the majority class ($m$), as well as their squares in order to capture non-linearities. Furthermore, we use an indicator variable ($method$) for the algorithms (i.e. tree, random forest, evolutionary tree), and whether the basis function ($bf$) was orthogonal or IBF. In addition we interact the variable for the basis function ($bf$) with other variables. The results of the models appear in Table \ref{tab:model-accuracy-results}. As seen there, most coefficients are significant at conventional levels of significance. The coefficients for IBF are significant and positive, which indicates that the use of IBFs increases the accuracy of the algorithms, however the net effect needs to account for the variable interactions. For this reason it is best to simulate the probability of a success to more fully understand how IBFs impact predictive accuracy.
 
 ```{r dataframe-for-model, include=FALSE}
 #n: number of observations, k: number of variables, f: number of classes of factor, m = proportion majority class
@@ -804,15 +802,15 @@ kable(summary.df,
   row_spec(11, hline_after = T)
 ```  
 
-In Figures \ref{fig:fig12-estimated-accuracy-n}, \ref{fig:fig13-estimated-accuracy-f}, \ref{fig:fig14-estimated-accuracy-k}, \ref{fig:fig15-estimated-accuracy-m}, the probabilities of correctly predicting an observation are plotted with respect to the characteristics of the datasets. The probabilities are predicted within the first decile and and ninth decile of the corresponding variable, to avoid making predictions in regions were the number of observations are sparse (for instance, as seen in Table \ref{tab:Datasets}, there is only one dataset with $n>40,000$). As well, the remaining variables are set at their median values. In this way, when predicting the probability as a function of $n$, $f$, $k$, and $m$ are set to their in-sample median values. The plots show the estimated probabilities with their respective $95$% confidence intervals.
+In Figures \ref{fig:fig12-estimated-accuracy-n}, \ref{fig:fig13-estimated-accuracy-f}, \ref{fig:fig14-estimated-accuracy-k}, \ref{fig:fig15-estimated-accuracy-m}, the probabilities of correctly predicting an observation are plotted with respect to the characteristics of the datasets. The probabilities are predicted within the first decile and and ninth decile of the corresponding variable, to avoid making predictions in regions were observations are sparse (for instance, as seen in Table \ref{tab:Datasets}, there is only one dataset with $n>40,000$). As well, the remaining variables are set to their median values. In this way, when predicting the probability as a function of $n$, $f$, $k$, and $m$ are set to their in-sample median values. The plots show the estimated probabilities with their respective $95$% confidence intervals.
 
-With respect to the size of the dataset ($n$), the general trend is that accuracy tends to decline for bigger datasets (see Figure \ref{fig:fig12-estimated-accuracy-n}). The use of IBFs is a clear improvement over DTs with orthogonal partitions, however, this is not the case for evolutionary trees, an algorithm that performs significantly better with orthogonal partitions. In the case of random forests, there is a a small significant difference between orthogonal partitions and IBFs, with orthogonal partitions leading to better accuracy for smaller datasets only ($n<1,500$). 
+With respect to the size of the dataset ($n$), the general trend indicated by Model 1 is that accuracy tends to decline for bigger datasets (see Figure \ref{fig:fig12-estimated-accuracy-n}). The use of IBFs is a clear improvement over DTs with orthogonal partitions, however, this is not the case for evolutionary trees, an algorithm that performs significantly better with orthogonal partitions. In the case of random forests, there is a a small significant difference between orthogonal partitions and IBFs, with orthogonal partitions leading to better accuracy for smaller datasets only ($n<1,500$). These results are replicated by Model 2, but with stronger gains for IBFs.
 
-Figure \ref{fig:fig13-estimated-accuracy-f} shows the results for the number of features $f$. As seen there, accuracy tends to improve as the number of features increases, irrespective of the method or basis function. Similar to the size of the sample, using IBFs uniformly tends to improve accuracy for the algorithm tree. Evolutionary trees are significantly more accurate when using orthogonal partitions. And orthogonal partitions in random forests work slightly better than IBFs, but only when the number of features is relatively small, approximately less than $15$, after which point the difference is no longer significant.
+Figure \ref{fig:fig13-estimated-accuracy-f} shows the results for the number of features $f$. As seen there, overall accuracy (Model 1) tends to improve as the number of features increases, irrespective of the method or basis function. Similar to the size of the sample, using IBFs uniformly tends to improve accuracy for the algorithm tree. Evolutionary trees are significantly more accurate when using orthogonal partitions. And orthogonal partitions in random forests work slightly better than IBFs, but only when the number of features is relatively small, approximately less than $15$, after which point the difference is no longer significant. This is similar in the case of Model 2, again, with a further favorable edge in the case of IBFs.
 
-The third dimension that we investigate is the number of classes. As shown in Figure \ref{fig:fig14-estimated-accuracy-k}, there is a general tendency for accuracy to deteriorate as the number of classes $k$ incrases. However, despite starting at higher levels of accuracy with respect to orthogonal partitions, this happens much more rapidly when IBFs are used. In this case, IBFs are associated with better or similar accuracy when $k\leq3$ but have significantly lower levels of accuracy when the dependent variables has more classes.
+The third dimension that we investigate is the number of classes. As shown in Figure \ref{fig:fig14-estimated-accuracy-k}, there is a general tendency for accuracy to deteriorate as the number of classes $k$ incrases. However, despite starting at higher levels of accuracy with respect to orthogonal partitions, this happens much more rapidly when IBFs are used. In this case, IBFs are associated with better or similar accuracy when $k\leq3$ but have significantly lower levels of accuracy when the dependent variables has more classes. The speed at which the performance of IBFs declines is somewhat slower for the best performing cases (Model 2).
 
-Lastly, with respect to the proportion of the majority class $m$, we can see in Figure \ref{fig:fig15-estimated-accuracy-m} that the probability tends to behave in a non-linear fashion, with accuracy being higher when one class has a majority but does not dominate. In this case, IBFs tend to perform significantly better than non-linear partitions. The superiority of IBFs is uniform for the algorithm tree, whereas for evolutionary tree and random forest, orthogonal partitions are significantly more accurate than IBFs.
+Lastly, with respect to the proportion of the majority class $m$, we can see in Figure \ref{fig:fig15-estimated-accuracy-m} that the probability tends to behave in a non-linear fashion, with accuracy being higher when one class has a majority but does not dominate. In this case, IBFs tend to perform significantly better than non-linear partitions. The superiority of IBFs is uniform for the algorithm tree, whereas for evolutionary tree and random forest, orthogonal partitions are significantly more accurate than IBFs. When looking at the best performers (Model 2), the superiority of IBFs is more uniform.
 
 It is important to keep in mind when interpreting these results, that each plot was estimated _while setting three dimensions to their median values_. For this reason, one must be cautious when trying to generalize. The results, nonetheless, are illustrative of potentially the range of different conditions in which the use of IBFs might be desirable.
 
@@ -1662,7 +1660,7 @@ As seen in the figure, low voter turnouts are associated with Electoral District
 
 Decision Trees are a popular data analysis technique used in a wide range of applications. The somewhat restrictive nature of binary orthogonal partitions has been recognized in the past, and a number of methods have been proposed in the literature that allow for oblique partitions. In this paper, we proposed a new strategy to induce oblique and non-linear partitions for DTs. This is achieved by introducing Interactive Basis Functions. The use of IBFs is attractive because it can induce partitions of different shapes at a relatively low computational cost. Furthermore, the underlying recursive-partition algorithm is not changed, which means that IBFs can be used with any implementation of DTs in existing software.
 
-An extensive benchmarking exercise using 93 publicly available classification datasets shows that the use of IBFs can improve the accuracy of the model without compromising model parsimony, at only very modest increases in computation time. Analysis of the results of the benchmarking experiments suggests that IBFs are consistently a superior alternative to conventional trees, and may also improve the performance of evolutionary trees and random forests. IBFs in particular seem to perform better for larger datasets with more features $f$, and when the number of classes $k$ is smaller and the target variable is not dominated by a single class, in other words when the proportion of the majority class $m$ does not exceed $40$-$50$%.
+An extensive benchmarking exercise using 93 publicly available classification datasets shows that the use of IBFs can improve the accuracy of the model without compromising model parsimony, at only very modest increases in computation time. Analysis of the results of the benchmarking experiments suggests that IBFs are a superior alternative to conventional trees in a wide range of situations, and may also improve the performance of evolutionary trees and random forests. IBFs in particular seem to perform better for 1) larger datasets; 2) with a large number of features $f$; 3) when the number of classes $k$ is small; and 4) the target variable is not dominated by a single class, in other words when the proportion of the majority class $m$ does not exceed $40$-$50$%.
 
 In addition to the benchmarking experiments, three case studies helped to illustrate the application and potential advantages of IBFs. In one spatial classification example, the accuracy of the model was maintained but potentially more appealing boundaries were identified. In a market segmentation example, likewise, accuracy was maintained but a more parsimonious and theoretically consistent model was obtained. And in a multifeature model of voter turnout, IBFs led to a better model fit and a more parsimonious model.
 
@@ -1673,7 +1671,7 @@ As we noted in the paper, the additive IBF is equivalent to previous efforts to 
 Acknowledgments
 ==========
 
-A. Paez would like to thank Dr. Tony Lea, Mr. Sean Howard, Mr. Peter Miron, and other participants in the Environics Analytics Methodological Seminars, for useful discussions in the early stages of this research. F.A. Lopez, M. Ruiz and M. Camacho acknowledge the financial support from projects ECO2015-65758-P, ECO2015-65637-P, and ECO2016-76178-P respectively. This study is the result of the activity carried out under the program Groups of Excellence of the Region of Murcia, the Fundacion Seneca, Science and Technology Agency of the region of Murcia project 19884/GERM/15. The following R packages were used during this research, and the authors wish to acknowledge their developers: `tidyverse` [@Wickham2017], `plyr` [@Wickham2011], `readxl` [@Wickham2018], `ggthemes` [@Arnold2018], `tree` [@Ripley2018], `evtree` [@Grubinger2014], `rpart` [@Therneau2017], `rpart.plot` [@Milborrow2018], `ggmap` [@Khale2013], `readr` [@Wickham2017readr], `rgdal` [@Bivand2018], `knitr` [@Xie2015; @Xie2018], `kableExtra` [@Zhu2018], `mlbench` [@Newman1998], `dprep` [@Acuna2015], `rattle.data` [@Williams2011], `microbenchmark` [@Mersmann2018], `RColorBrewer` [@Neuwirth2014], `scales` [@Wickham2018scales], and `gridExtra` [@Auguie2017].
+A. Paez would like to thank Dr. Tony Lea, Mr. Sean Howard, Mr. Peter Miron, and other participants in the Environics Analytics Methodological Seminars, for useful discussions in the early stages of this research. F.A. Lopez, M. Ruiz and M. Camacho acknowledge the financial support from projects ECO2015-65758-P, ECO2015-65637-P, and ECO2016-76178-P respectively. This study is a result of activity carried out under the program Groups of Excellence of the Region of Murcia, the Fundacion Seneca, Science and Technology Agency of the region of Murcia project 19884/GERM/15. The following R packages were used during this research, and the authors wish to acknowledge their developers: `tidyverse` [@Wickham2017], `plyr` [@Wickham2011], `readxl` [@Wickham2018], `ggthemes` [@Arnold2018], `tree` [@Ripley2018], `evtree` [@Grubinger2014], `rpart` [@Therneau2017], `rpart.plot` [@Milborrow2018], `ggmap` [@Khale2013], `readr` [@Wickham2017readr], `rgdal` [@Bivand2018], `knitr` [@Xie2015; @Xie2018], `kableExtra` [@Zhu2018], `mlbench` [@Newman1998], `dprep` [@Acuna2015], `rattle.data` [@Williams2011], `microbenchmark` [@Mersmann2018], `RColorBrewer` [@Neuwirth2014], `scales` [@Wickham2018scales], and `gridExtra` [@Auguie2017].
 
 References {#references .unnumbered}
 ==========
